name:                Phylogeny
-- The package version.  See the Haskell package versioning policy (PVP) 
-- for standards guiding when and how versions should be incremented.
-- http://www.haskell.org/haskellwiki/Package_versioning_policy
-- PVP summary:      +-+------- breaking API changes
--                   | | +----- non-breaking API additions
--                   | | | +--- code changes with no API change
version:             1.0.0
synopsis:            Libary for parsing and processing of phylogeny data
description:         Libary for parsing and processing of phylogeny data
                     
license:             GPL-3
license-file:        LICENSE
author:              Florian Eggenhofer
maintainer:          egg@tbi.univie.ac.at
-- copyright:           
category:            Bioinformatics
build-type:          Simple
cabal-version:       >=1.8

source-repository head
  type:     git
  location: https://github.com/eggzilla/Phylogeny

source-repository this
  type:     git
  location: https://github.com/eggzilla/Phylogeny/tree/1.0.0
  tag:      1.0.0

library
  -- Modules exported by the library.
  exposed-modules:   Bio.PhylogenyData, Bio.Phylogeny 
 
  -- Other library packages from which modules are imported.
  build-depends:       base >=4.5 && <5, parsec, containers, either-unwrap, fgl

  -- Directories containing source files.
  hs-source-dirs:      src
  
